--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
+<link type="text/css" rel="stylesheet" href="/css/styles.css">
+
 <h1>Welcome to Duly!</h1>
 
 </h2>Let's make your link shorter.</h2>
@@ -5,6 +7,16 @@
 
 
 
-<h3>First, log in.</h3>
+<a href="/shorten"><h3>First, enter your long link:</h3></a>
+<form action="http://www.html.am/html-codes/textboxes/submitted.cfm">
+<textarea name="TextBox" rows="1">
+Enter long link
+</textarea>
+<br />
+<input type="submit" />
+</form>
+
+
+
 
 
