--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Duly</title>
-    <link type="text/css" rel="stylesheet" href="/styles.css">
+    <link type="text/css" rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
+  	 
     <%= yield %>
   </body>
 </html>
