--- a/views/login.erb
+++ b/views/login.erb
@@ -1,33 +1,43 @@
-<h1>Welcome to Duly!</h1>
-
-</h2>Let's make your link shorter.</h2>
-
-
-
-
-<h3>First, log in.</h3>
-
-
-
-
 <h1>Login</h1>
-<form action='/login' method='post'>
-  <div class='field'>
-    <div class='label'>
-      <label for="user_email'">Email</label>
+<form action="/login" method="post">
+  <div class="field">
+    <div class="label">
+      <label for="user_email">Email</label>
     </div>
-    <input id='user_email' name='email' size='30' type='text'>
+    <input id="user_email" name="email" size=30 type="text">
   </div>
-  <div class='field'>
-    <div class='label'>
-      <label for='user_password'>Password</label>
+  <div class="field">
+    <div class="label">
+      <label for="user_password">Password</label>
     </div>
-    <input id='user_password' name='password' size='30' type='password'>
-  </div>
-  <div class='buttons'>
-    <input type='submit' value='Login'>
-    <a href='/signup'>
-      Sign up
-    </a>
+    <input id="user_password" name="password" size=30 type="password"></div>
+  <div class="buttons">
+    <input value="Login" type="submit">
+    <a href="/signup">Sign up</a>
   </div>
 </form>
+
+
+
+
+/ <h1>Login</h1>
+/ <form action='/login' method='post'>
+/   <div class='field'>
+/     <div class='label'>
+/       <label for="user_email'">Email</label>
+/     </div>
+/     <input id='user_email' name='email' size='30' type='text'>
+/   </div>
+/   <div class='field'>
+/     <div class='label'>
+/       <label for='user_password'>Password</label>
+/     </div>
+/     <input id='user_password' name='password' size='30' type='password'>
+/   </div>
+/   <div class='buttons'>
+/     <input type='submit' value='Login'>
+/     <a href='/signup'>
+/       Sign up
+/     </a>
+/   </div>
+/ </form>
