--- a/views/index.erb
+++ b/views/index.erb
@@ -8,10 +8,9 @@
 
 
 <a href="/shorten"><h3>First, enter your long link:</h3></a>
-<form action="http://www.html.am/html-codes/textboxes/submitted.cfm">
-<textarea name="TextBox" rows="1">
-Enter long link
-</textarea>
+<form action="/submit" method="post">
+<input type="text" name="long_url">
+<!-- <input type="text" name="name"> -->
 <br />
 <input type="submit" />
 </form>
